@@ -124,7 +124,7 @@ name|StringHelper
 import|;
 end_import
 begin_comment
-comment|/**   * An indexed binary field.  *<p>  * Finding all documents within an N-dimensional shape or range at search time is  * efficient.  Multiple values for the same field in one document  * is allowed.  *<p>  * This field defines static factory methods for creating common queries:  *<ul>  *<li>{@link #newExactQuery(String, byte[])} for matching an exact 1D point.  *<li>{@link #newSetQuery(String, byte[][]) newSetQuery(String, byte[]...)} for matching a set of 1D values.  *<li>{@link #newRangeQuery(String, byte[], byte[])} for matching a 1D range.  *<li>{@link #newRangeQuery(String, byte[][], byte[][])} for matching points/ranges in n-dimensional space.  *</ul>   * @see PointValues  */
+comment|/**   * An indexed binary field for fast range filters.  If you also  * need to store the value, you should add a separate {@link StoredField} instance.  *<p>  * Finding all documents within an N-dimensional shape or range at search time is  * efficient.  Multiple values for the same field in one document  * is allowed.  *<p>  * This field defines static factory methods for creating common queries:  *<ul>  *<li>{@link #newExactQuery(String, byte[])} for matching an exact 1D point.  *<li>{@link #newSetQuery(String, byte[][]) newSetQuery(String, byte[]...)} for matching a set of 1D values.  *<li>{@link #newRangeQuery(String, byte[], byte[])} for matching a 1D range.  *<li>{@link #newRangeQuery(String, byte[][], byte[][])} for matching points/ranges in n-dimensional space.  *</ul>   * @see PointValues  */
 end_comment
 begin_class
 DECL|class|BinaryPoint
